--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -1,14 +1,13 @@
 
 {% extends 'navbar.html' %}
 {% block content %}
-<title>Compilador</title>
 <div id="mid-container-ajuste">
     <div id="container-top">
         <div id="compilador-top">
             <p id="titulo">Compilador <b>Oracle</b></p>
             <div id="buttons">
-                <button id="borrar" onclick="limpiar()">Borrar</button>
-                <button id="play" onclick="compile()"> Ejecutar</button>
+                <button id="borrar" onclick="limpiar()">Clear</button>
+                <button id="play" onclick="compile()"> Play</button>
             </div>
         </div>
         <div id="compilador-bottom">
