--- a/Static/css/drag.css
+++ b/Static/css/drag.css
@@ -32,7 +32,7 @@ body{
   height: 273px;
   background-color: white;
   margin: 30px;
-  z-index: 20;
+  
   border-radius: 8px;
   /* box-shadow: 7px 7px 5px 0px rgba(214,214,214,1); */
   border: 2px solid rgb(190, 190, 190);
@@ -114,6 +114,7 @@ svg {
 #svgContainer {
   width: 100%;
   height: 100%;
+  z-index: -10;
   position: absolute;
 }
 
@@ -123,4 +124,8 @@ svg {
   height: 10px;
   background-color: green;
   border-radius: 50% 50%;
+}
+
+svg, path {
+  z-index: '9999999';
 }
