--- a/Templates/drag.html
+++ b/Templates/drag.html
@@ -1,5 +1,6 @@
 
 <!-- INSTRUCCIONES DE JS  -->
+{% load static %}
 <!-- Insertar hasta arriba  -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="{% static 'js/libs/jquery.html-svg-connect.js'%}"></script>
@@ -7,7 +8,8 @@
 <!-- drag -->
 
 
-<!-- INSERTAR EN EL DIV LLAMADO contenido-contenidoEjercicios-overflow   DEL HMTL ACTIVIDADES EJERCICIO-->
+<!-- INSERTAR EN EL DIV LLAMADO contenido-contenidoEjercicios-overflow   
+	DEL HMTL ACTIVIDADES EJERCICIO-->
 <div id="contenido-contenidoEjercicios-overflow-drag">
 	<div style=" top: 268px; left: 522.96875px; background-color: green;"></div>
 	<div class="main">
