--- a/Templates/maestro/dashboard.html
+++ b/Templates/maestro/dashboard.html
@@ -22,8 +22,8 @@
                     <a href="{% url 'dashboard' %}" style="text-decoration: none;"><p id="tituloEjercicio2" class="titulo-base">Bass</p></a> 
                     <ul class="navbar-list">
                         <li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
-                        <li class="opciones"><a href="{% url 'unidades' %}" class="opcionContenido">Contenido</a></li>
-                        <li class="opciones"><a href="{% url 'compilador' %}" class="opcionHerramientas">Compilador</a></li>
+                        <!-- <li class="opciones"><a href="{% url 'unidades' %}" class="opcionContenido">Contenido</a></li>
+                        <li class="opciones"><a href="{% url 'compilador' %}" class="opcionHerramientas">Compilador</a></li> -->
                     </ul>		
                     <div class="navbar-profile">
                         <!-- <div class="navbar-notification">
@@ -51,8 +51,54 @@
                 
             </div>
 
-            {% block content %}
-            {% endblock %}
+
+<div id="mid-container">
+    <div id="img-dashboard-container">
+        <img src="{% static 'img/code.png' %}" alt="" class="img">
+    </div>
+    <div id="right-dashboard-container">
+    <div id="right-dashboard-container-top">
+        <div id="rectangulo"> </div>
+        <h1 id="dashboard-title">Inicio</h1>
+    </div>
+        <div id="right-dashboard-container-middle">
+            <P>Sin análisis de grandes volúmenes de datos, las empresas son ciegos y sordos, vagando hacia fuera sobre la web como ciervos en una autopista.
+                </P>
+                <b id="autor">– Geoffrey Moore</b>
+        </div>
+    </div>
+</div>
+<div id="bottom-container">
+<div id="cuadros-container">
+    <a href="{% url 'respuestas31' %}">
+        <div class="dashboard-cuadros">
+            <img src="{% static 'img/bd.png' %}" alt="">
+            <text id="text1">Respuestas</text><b style="color: #FF5A09;">31</b>
+        </div>
+    </a>
+
+    <a href="{% url 'getCalificaciones' %}">
+        <div class="dashboard-cuadros">
+            <img src="{% static 'img/bd.png' %}" alt="">
+            <text id="text1">Calificaciones de</text><b style="color: #FF5A09;">ejercicios</b>
+        </div>
+    </a>
+
+    <a href="{% url 'ejercicios' %}">
+        <div class="dashboard-cuadros">
+            <img src="{% static 'img/bd.png' %}" alt="">
+            <text id="text1">Estado de</text><b style="color: #FF5A09;">ejercicios</b>
+        </div>
+    </a>
+    
+    
+    
+</div>
+</div>
+<footer>
+
+<b>Centro de Desarrollo- </b><b style="color: #FF5A09;">2020 &copy.</b>
+</footer>
 
         </div>
 
@@ -67,4 +113,3 @@
      <script src="{% static 'js/jQuery.js' %}"></script>
 </body>
 </html>
-
