--- a/Static/css/compilador.css
+++ b/Static/css/compilador.css
@@ -135,7 +135,7 @@
 
     .opciones{
         font-size: 17px;
-        cursor: pointer;
+     
       
         
         width: 120px;
@@ -195,6 +195,7 @@
         height: 15%;
        
         display: flex;
+        justify-content: flex-end;
     }
     #compilador-bottom{
         width: 100%;
@@ -207,9 +208,9 @@
     #titulo{
         display: flex;
         align-items: center;
-        width: 60%;
+        width: 70%;
         color: white;
-        padding-left: 20px;
+        
     }
     #buttons{
         width: 35%;
@@ -227,10 +228,8 @@
         transition: .85s;
     }
     #play:hover{
-        background-color: #fafafa;
-        border:3px solid rgb(60, 170, 8);
-        color: rgb(60, 170, 8) !important;
-        font-weight: bold;
+        background-color: rgb(41, 117, 6);
+    
     }
     #borrar{
         border:none;
