--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -60,6 +60,8 @@
         
      </div>
 
+     <script src="{% static 'js/morris.min.js' %}"></script>
+     <script src="{% static 'js/graficas.js' %}"></script>
      <script src="{% static 'js/compilador lib/codemirror.js' %}"></script>
      <script src="{% static 'js/sql.js' %}"></script>
      <script src="{% static 'js/Compilador.js' %}"></script>
