--- a/Templates/profile.html
+++ b/Templates/profile.html
@@ -2,6 +2,11 @@
 {% load static %}
 
 {% block content %}
+<title>Perfil</title>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<link rel="stylesheet" href="{% static 'css/morris.css' %}">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+
 <div class="row">
 	<section class="user-information blue-dark-2 fs-15">
 		<div>
@@ -27,16 +32,15 @@
 	</section>
 </div>
 
-<div class="row">
+<div class="row progresoClass">
 	<div class="article-text txt-white">
 		<h2 class="fs-30 font-bold">Progreso del alumno</h2>
-		<p class="fs-16">Gráfica de estadísticas de cada unidad del alumno, se muestran los aciertos por cada intento de los ejercicios en la unidad.</p>
+		<p class="fs-16">Gráfica de estadísticas del progreso del alumno, se muestran las calificaciones por cada intento de los ejercicios en la unidad.</p>
 	</div>
-	<div class="article-information blue-dark-2">
-
+	<div class="article-information blue-dark-2" id="myfirstchart">
+		
 	</div>
 </div>
-
 
 {% if calificaciones %}
 	{% regroup calificaciones by ejercicio.unidad as unidad_lista %}
@@ -46,12 +50,14 @@
 
 	<div class="row">
 		<section class="user-score">
-		{% for calificacion in unidad.list %}
-			<div class="score blue-dark-2">
-				<p>{{calificacion.ejercicio}}</p>
-				<p>Calificacion: {{calificacion.calificacion}}</p>
-			</div>
-		{% endfor %}
+		<div id="crecienteUnidad">
+			{% for calificacion in unidad.list %}
+				<div class="score blue-dark-2 alumno-calificacion">
+					<p>{{calificacion.ejercicio}}</p>
+					<p>Calificacion: {{calificacion.calificacion}}</p>
+				</div>
+			{% endfor %}
+		</div>
 		</section>
 	</div>
 
@@ -60,7 +66,7 @@
 	
 		
 {% else %}
-	<div>
+	<div class="textPerfilInfo">
 		Aqui se mostrarán tus calificaciones de los ejercicios que hayas realizado.
 	</div>
 {% endif %}
