--- a/Templates/ejercicios/ejercicio-4.html
+++ b/Templates/ejercicios/ejercicio-4.html
@@ -8,6 +8,21 @@
   }
 </script>
 
+Recuerda:
+<ul>
+    <li>El ISBN cuenta con 13 numeros</li>
+    <li>Atributos VARCHAR deberán almacenar 100 caracteres por igual</li>
+    <li>La tabla empleados debera poder contener 1 millon de registros</li>
+    <li>El expediente de estudiantes contiene 6 numeros</li>
+    <li>La tabla  prestamos debera poder contener 1 millon de registros</li>
+    <LI>La construccion de las PK deberas realizarla SIN realizar el CONSTRAINT apropiado</LI>
+    <li>Las PK deberan siempre estar antes que los demas atributos</li>
+    <li>La construccion de FK deberas realizarlas poniendo "FK_NOMBRECAMPOCOMPLETO"</li>
+    <li>IMPORTANTE: deberas usar el mismo nombre de los atributos del ejercicio #9 de la unidad #5</li>
+</ul>
+
+<br>
+
 <div contenteditable="true" id="query">
 {% if respuestas %}
     {% for respuesta in respuestas %}
