--- a/Templates/ejercicios/ejercicio-5-2.html
+++ b/Templates/ejercicios/ejercicio-5-2.html
@@ -42,8 +42,8 @@
   <li class="ui-state-default">PK - ID(varchar2)</li>
   <li class="ui-state-default">PK - expedienteAlumno(varchar2)</li>
   <li class="ui-state-default">FK - expedienteAlumno(number)</li>
-  <li class="ui-state-default">FK - isbn(varchar2)</li>
-  <li class="ui-state-default">PK - isbn(number)</li>
+  <li class="ui-state-default">PK - isbn(varchar2)</li>
+  <li class="ui-state-default">FK - isbn(number)</li>
   <li class="ui-state-default">fechaPrestamo(date)</li>
   <li class="ui-state-default">FK - fechaPrestamo(date)</li>
   <li class="ui-state-default">fechaEntrega(date)</li>
@@ -56,11 +56,10 @@
 <ul id="sortable2" class="dropfalse">
   LIBRO
   <!-- ORACLE -->
-  <li class="ui-state-default">PK - idLibro</li>
+  <li class="ui-state-default">PK - isbn</li>
   <li class="ui-state-default">titulo</li>
   <li class="ui-state-default">autor</li>
   <li class="ui-state-default">editorial</li>
-  <li class="ui-state-default">isbn</li>
   <li class="ui-state-default">ubicacion</li>
   
 </ul>
