--- a/Templates/ejercicios/ejercicio-7-2_KxIifDh.html
+++ b/Templates/ejercicios/ejercicio-7-2_KxIifDh.html
@@ -15,6 +15,14 @@
     <li>Liste el nombre, apellido, fecha de contratación y salario de aquellos empleados que no tienen comisión, y ordene la lista por nombre y apellido (utilice la cláusula ORDER BY).</li>
     <li>Liste el nombre y apellido concatenado por una coma (,) de todos los empleados que tengan como cargo SH_CLERK ó FI_ACCOUNT, y que además no tengan comisión. Ordene el resultado por apellido descendente.</li>
 </ol>
+
+<br>
+<ul>Importante:
+    <li>Procura que las palabras sean separadas por SOLO 1 ESPACIO</li>
+    <li>Escribe los atributos pedidos tal como se listan arriba</li>
+    <li>En uno o más ejercicios, segun sea el caso, deberas usar JOIN</li>
+    <li>No sera posible usar subconsultas</li>
+</ul>
 <br>
 <div id="query" contenteditable="true">
     {% if respuestas %}
