--- a/Static/css/estilos.css
+++ b/Static/css/estilos.css
@@ -148,6 +148,8 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        text-align: center;
+        color: white;
       }
       .progresoClass{
           align-items: center;
