*fix* Foorlop Counter from 0 insteado of 1 in unidades

--- a/Templates/actividadesEjercicios.html
+++ b/Templates/actividadesEjercicios.html
@@ -51,7 +51,7 @@
 							{% endif %}
 						</a>
 						{% else %}
-							<div class="u3">{{forloop.counter0}}</div>
+							<div class="u3">{{forloop.counter}}</div>
 						{% endif %}
 					{% endfor %}
 				</div>
