--- a/Static/css/compilador.css
+++ b/Static/css/compilador.css
@@ -229,7 +229,7 @@
     #play:hover{
         background-color: #fafafa;
         border:3px solid rgb(60, 170, 8);
-        color: rgb(60, 170, 8) !important;
+        color: rgb(60, 170, 8);
         font-weight: bold;
     }
     #borrar{
@@ -329,7 +329,67 @@
         table tr:nth-child(odd) {background-color: #c1c9e9;}
 
         table tr:nth-child(even) {background-color: #e8edff;}
-    
-
 }
 
+/* CSS LOADER */
+
+.lds-facebook {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-facebook div {
+    display: inline-block;
+    position: absolute;
+    left: 8px;
+    width: 16px;
+    background: rgba(255, 255, 255, 0.7);
+    animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  }
+  .lds-facebook div:nth-child(1) {
+    left: 8px;
+    animation-delay: -0.24s;
+  }
+  .lds-facebook div:nth-child(2) {
+    left: 32px;
+    animation-delay: -0.12s;
+  }
+  .lds-facebook div:nth-child(3) {
+    left: 56px;
+    animation-delay: 0;
+  }
+  @keyframes lds-facebook {
+    0% {
+      top: 8px;
+      height: 64px;
+    }
+    50%, 100% {
+      top: 24px;
+      height: 32px;
+    }
+  }
+
+.loader-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-opacity {
+    background-color: rgba(66, 69, 86, 0.1) !important;
+}
+
+.hide {
+    display: none;
+}
+
+.disabled {
+    background-color: rgba(50, 143, 7, 0.4) !important;
+    border: none !important;
+    color: #fff !important;
+    font-weight: bold;
+    cursor: auto !important;
+}
