--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -16,6 +16,9 @@
     </div>
     <div id="container-bottom">
         <div id="tablas-container">
+            <div class="loader-container">
+                <div id="loader-animation" class="lds-facebook hide"><div></div><div></div><div></div></div>
+            </div>
         </div>
     </div>
 </div>
