--- a/Templates/profile.html
+++ b/Templates/profile.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 <title>Perfil</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <link rel="stylesheet" href="{% static 'css/morris.css' %}">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
 
 <div class="row">
 	<section class="user-information blue-dark-2 fs-15">
