Cambios solicitados Uriel

--- a/Static/css/estilosEjercicios.css
+++ b/Static/css/estilosEjercicios.css
@@ -72,12 +72,27 @@ border-width: 3.1px;
             color: #d4cfcf;
             
         }
+        
+        table {     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+            font-size: 12px;    margin: 10px;     width: 480px; text-align: left;    border-collapse: collapse; }
+        
+        th {     font-size: 13px;     font-weight: normal;     padding: 8px;     background: #b9c9fe;
+            border-top: 4px solid #aabcfe;    border-bottom: 1px solid #fff; color: #039; }
+        
+        td {    padding: 8px;    ;     border-bottom: 1px solid #fff;
+            color: #669;    border-top: 1px solid transparent; }
+        
+        tr:hover td { background: #97a3cf; color: #339; }
+        table tr:nth-child(odd) {background-color: #c1c9e9;}
 
+        table tr:nth-child(even) {background-color: #e8edff;}
         /* input[type=password], input[type=text] {
             padding-top: .5rem;
             padding-left: .5rem;
         } */
-       
+       .opcionesTabla{
+           color: gray;
+       }
         .subtituloLogin{
             padding-top:5%;
             padding-bottom:5%;
@@ -519,6 +534,7 @@ box-shadow: 6px 6px 5px 0px rgba(50,50,69,1);
             height: 399px;
             background-color: #f2f5f9;
             border-radius: 8px;
+            color: gray;
         }
         .openCompiladorB{
             -webkit-box-shadow: 4px 4px 5px 0px rgba(224,224,224,0.62);
