--- a/Templates/ejercicios/ejercicio-8.html
+++ b/Templates/ejercicios/ejercicio-8.html
@@ -3,6 +3,12 @@
 <script>
     window.onload=function(){
     document.getElementById("btn-ejercicio-7-1").addEventListener("click", enviarEjercicio7_1);
+  
+    var element=document.getElementById("query");
+    element.addEventListener('click',  function borrarTexto(ev){
+        ev.target.innerHTML="";
+        ev.target.style.color="black";
+    });
   }
 </script>
 
