--- a/Templates/ejercicios/ejercicio1_N2mh6h9.html
+++ b/Templates/ejercicios/ejercicio1_N2mh6h9.html
@@ -1,54 +1,57 @@
 {% extends 'actividadesEjercicios.html' %}
 {% block ejercicio %}
-<style>
-    #table, th, td{ 
-        padding: 10px;
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-</style>
+
 
 <script>
     window.onload=function(){
         document.getElementById("btn-ejercicio-3-1").addEventListener("click", enviarEjercicio3_1);
+        var elements=document.getElementsByClassName("opcionesTabla");
+       for (var i = 0; i < elements.length; i++) {
+        elements[i].addEventListener('click',  function borrarTexto(ev){
+        ev.target.innerHTML="";
+        ev.target.style.color="black";
+        });
+         }
     }
+  
+  
 </script>
 
 <table id="tabla" contenteditable="true">
     <tr>
-        <th>Nombre SMBD 1</th>
-        <th>Nombre SMBD 2</th>
-        <th>Nombre SMBD 3</th>
+        <th class="opcionesTabla">Nombre SMBD 1</th>
+        <th class="opcionesTabla">Nombre SMBD 2</th>
+        <th class="opcionesTabla">Nombre SMBD 3</th>
     </tr>
 
     <tr>
-        <td contenteditable='true'>Caracteristica 11</td>
-        <td contenteditable='true'>Caracteristica 12</td>
-        <td contenteditable='true'>Caracteristica 13</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 11</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 12</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 13</td>
     </tr>
 
     <tr>
-        <td contenteditable='true'>Caracteristica 21</td>
-        <td contenteditable='true'>Caracteristica 22</td>
-        <td contenteditable='true'>Caracteristica 23</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 21</td>
+        <td contenteditable='true'class="opcionesTabla">Caracteristica 22</td>
+        <td contenteditable='true'class="opcionesTabla">Caracteristica 23</td>
     </tr>
 
     <tr>
-        <td contenteditable='true'>Caracteristica 31</td>
-        <td contenteditable='true'>Caracteristica 32</td>
-        <td contenteditable='true'>Caracteristica 33</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 31</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 32</td>
+        <td contenteditable='true'class="opcionesTabla">Caracteristica 33</td>
     </tr>
 
     <tr>
-        <td contenteditable='true'>Caracteristica 41</td>
-        <td contenteditable='true'>Caracteristica 42</td>
-        <td contenteditable='true'>Caracteristica 43</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 41</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 42</td>
+        <td contenteditable='true' class="opcionesTabla">Caracteristica 43</td>
     </tr>
 
     <tr>
-        <td contenteditable='true'>Caracteristica 51</td>
-        <td contenteditable='true'>Caracteristica 52</td>
-        <td contenteditable='true'>Caracteristica 53</td>
+        <td contenteditable='true'class="opcionesTabla">Caracteristica 51</td>
+        <td contenteditable='true'class="opcionesTabla">Caracteristica 52</td>
+        <td contenteditable='true'class="opcionesTabla">Caracteristica 53</td>
     </tr>
 </table>
 
