--- a/Static/css/estilos.css
+++ b/Static/css/estilos.css
@@ -117,11 +117,11 @@
         .errorlist.nonfield{
             margin-top: 15px;
         }
-        li{
+        /* li{
             color: white;
             font-size: 12px;
             text-align: center;
-        }
+        } */
         #id_username{
             width: 100%;
             height: 37px;
@@ -717,6 +717,7 @@ transition: .55s;
 /*--------Estilos Respuestas Maestro------------*/
 .container {
   height: 100vh;
+  background-color: #333645;
 }
 .principalRespuestas {
   height: 85%;
