Cambios que faltaron en maestro

--- a/Templates/maestro/calificaciones.html
+++ b/Templates/maestro/calificaciones.html
@@ -30,13 +30,13 @@
                     <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Estado</a></li>
                 </ul>
                 <div class="navbar-profile">
-                    <div class="navbar-notification navbar-avatar">
+                    <!-- <div class="navbar-notification navbar-avatar">
                         <div class="navbar-picture">
                             <a href="{% url 'perfil' %}">
                                 <img src="{% static 'img/perfil.jpg' %}" alt="" class="img-profile">
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="navbar-logout navbar-avatar">
                         <div>
                             <a href="{% url 'cerrarSesion' %}">
