Cambios de Revision FInal no reflejados

--- a/Templates/ejercicios/ejercicio-4.html
+++ b/Templates/ejercicios/ejercicio-4.html
@@ -1,7 +1,10 @@
 {% extends 'actividadesEjercicios.html' %}
 
 {% block ejercicio %}
-
+<form action="{% url 'compilador' %}" target="_blank">
+    <input id="app-submit" type="submit" value="Compilador" class="openCompiladorB"/>
+  </form>
+  
 <script>
     window.onload=function(){
     document.getElementById("btn-ejercicio-5-1").addEventListener("click", enviarEjercicio5_1);
