--- a/Templates/profile.html
+++ b/Templates/profile.html
@@ -9,13 +9,9 @@
 
 <div class="row">
 	<section class="user-information blue-dark-2 fs-15">
+		
 		<div>
-			<div class="navbar-notification navbar-avatar user-avatar">
-				<div class="navbar-picture"></div>
-			</div>
-		</div>
-		<div>
-			<p class="txt-white"><strong>¡Bienvenido!</strong></p>
+			<p class="txt-white" style="height: 50px; display: flex; align-items: center;"><strong>¡Bienvenido!</strong></p>
 			<p class="txt-gray">{{request.user.get_full_name}}</p>
 		</div>
 		<div>
