--- a/Templates/ejercicios/ejercicio-8.html
+++ b/Templates/ejercicios/ejercicio-8.html
@@ -1,5 +1,9 @@
 {% extends 'actividadesEjercicios.html' %}
 {% block ejercicio %}
+
+<form action="{% url 'compilador' %}" target="_blank">
+    <input id="app-submit" type="submit" value="Compilador" class="openCompiladorB"/>
+  </form>
 <script>
     window.onload=function(){
     document.getElementById("btn-ejercicio-7-1").addEventListener("click", enviarEjercicio7_1);
