--- a/Static/css/compilador.css
+++ b/Static/css/compilador.css
@@ -135,9 +135,6 @@
 
     .opciones{
         font-size: 17px;
-     
-      
-        
         width: 120px;
         height: 40px;
         transition: 0.75s;
@@ -193,9 +190,8 @@
     #compilador-top{
         width: 100%;
         height: 15%;
-       
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
     }
     #compilador-bottom{
         width: 100%;
@@ -213,12 +209,12 @@
         
     }
     #buttons{
-        width: 35%;
-        
+        width: 30%;
         height: 100%;
         display: flex;
         justify-content: end;
         align-items: center;
+        
     }
     #play{
         background-color: rgb(50, 143, 7);
@@ -228,7 +224,8 @@
         transition: .85s;
     }
     #play:hover{
-        background-color: rgb(41, 117, 6);
+        background-color: rgb(41, 117, 6) !important;
+        
     
     }
     #borrar{
