--- a/Templates/maestro/dashboard.html
+++ b/Templates/maestro/dashboard.html
@@ -27,6 +27,9 @@
                     </a>
                     <ul class="navbar-list">
                         <li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
+                    <li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionContenido">Respuestas</a></li>
+                    <li class="opciones"><a href="{% url 'getCalificaciones' %}" class="opcionHerramientas">Calificaciones</a></li>
+                    <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Estado</a></li>
                     </ul>
                     <div class="navbar-profile">
                         <!-- <div class="navbar-notification navbar-avatar">
