--- a/Static/css/estilos.css
+++ b/Static/css/estilos.css
@@ -1057,6 +1057,55 @@ transition: .55s;
   text-align: center;
   font-weight: bold;
 }
+
+.modal-container {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  background-color: rgba(0,0,0,0.3);
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal-container.show {
+  
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal{
+  background-color: #fff;
+  width: 600px;
+  max-width: 100%;
+  border-radius: 5px;
+  padding: 30px 50px;
+  text-align: center;
+}
+.modal h1 {
+  margin: 0;
+}
+.modal p {
+  opacity: 0.7;
+}
+
+.botonCerrar{
+  margin-top: 15px;
+  background-color: #00B0FF;
+  border-radius: 15px;
+  width: 30%;
+  height: 1.5rem;
+  margin-left: 35%;
+  padding-top:7px ;
+}
+.botonCerrar:hover{
+  cursor: pointer;
+}
+
+
+
 /*-----------------------------------------------*/
 @media (max-width: 1122px) {
   #unidadesEjerciciosContenedor {
