--- a/Static/css/estilosEjercicios.css
+++ b/Static/css/estilosEjercicios.css
@@ -231,7 +231,7 @@ border-width: 3.1px;
                     /*background-color: #172464;*/
                     width: 100%;
                     /*height: 47.5%;*/
-                    height: 45.5%;
+                    height: 55.5%;
                     display: flex;
                     align-items: center;
                     flex-direction: column;
@@ -251,6 +251,8 @@ font-size: 16px;
                         background-color: #172464;
                         width: 100%;
                         overflow: hidden;
+                        
+                        scroll-behavior: smooth;
                         margin-top: 15px;
                         display: flex;
                         justify-content: center;
