--- a/Static/css/estilosEjercicios.css
+++ b/Static/css/estilosEjercicios.css
@@ -265,6 +265,7 @@ font-size: 16px;
                         align-items: center;
                         justify-content: center;
                         flex-wrap: wrap;
+                        
                     }
                    
                     .unidadesEjerciciosContenedor.active > div:last-child {
@@ -439,13 +440,15 @@ box-shadow: 6px 6px 5px 0px rgba(50,50,69,1);
             #encabezado-contenidoEjercicios{
                 z-index: 9999999999;
                 width: 90%;
-                height:auto;
+                height:13%;
+                
                 /*margin-left: 10%;*/
                 margin-top: 2%;
                 background-color: #FFFFFF;
                 padding: 2%;
                 border-radius:10px;
                 box-shadow: 0px 0px 4px gray;
+                overflow: auto;
 
             }
                 #titulo-contenidoEjercicos{
@@ -665,12 +668,21 @@ box-shadow: 6px 6px 5px 0px rgba(50,50,69,1);
         }
 
         /*-----------------------------------------------*/
+        @media(max-width:900px ){
+            
+            .unidadesEjerciciosContenedor-overflow{
+                overflow: auto;
+            }
+        }
         @media(max-width:1122px ){
             #unidadesEjerciciosContenedor{
                 overflow-y: scroll;
             }
             #unidadesEjerciciosContenedor>div{
                 margin-top: 30px;
+            }
+            .unidadesEjerciciosContenedor-overflow{
+                overflow: auto;
             }
         }
         @media(max-width: 1235px){
